src_old/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountOverRide__c</fullName>
        <label>Pre-bill Override %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AllowUnknownAssignments__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Unknown Assignments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApexJobName__c</fullName>
        <label>Apex Job Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BulkImportStatus__c</fullName>
        <label>Bulk Import Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMKOneHubAccountID__c</fullName>
        <label>Lawson Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CanRequestProjects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Request Projects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <label>Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OneHubAccountType__c</fullName>
        <label>OneHubAccountType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Execution Company</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Retail Category</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>3PL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjectBuilder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Builder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ThirdPartyAgencyPrimaryContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>3PL Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ThirdPartyApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Third Party Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <label>Unique Key</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>retailercalendar__c</fullName>
        <label>retailer  calendar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>